Watch CSS changes in dev

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "build": "deno run --allow-read --allow-write lib/build.js",
-    "dev": "deno run --allow-read --allow-write lib/build.js"
+    "dev": "deno run --allow-read --allow-write --watch=styles lib/build.js"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
