--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
   "tasks": {
-    "build": "deno run --allow-read --allow-write lib/build.js",
-    "dev": "deno run --allow-read --allow-write --watch=styles,blog lib/build.js",
-    "serve": "deno run --unstable --allow-read --allow-net lib/serve.js _site"
+    "build": "deno run --allow-read --allow-write=_site --allow-net=esm.sh lib/build.js",
+    "dev": "deno run --allow-read --allow-write=_site --allow-net=esm.sh --watch=styles,blog lib/build.js",
+    "serve": "deno run --unstable --allow-read=_site --allow-net lib/serve.js _site"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
