--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "build": "deno run --allow-read --allow-write=_site --allow-net=esm.sh lib/build.js",
-    "dev": "deno run --allow-read --allow-write=_site --allow-net=esm.sh --watch lib/build.js",
+    "dev": "deno run -A --watch=content/ lib/build.js & deno task serve",
     "serve": "deno run --unstable --allow-read=_site --allow-net lib/serve.js _site"
   },
   "compilerOptions": {
